<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_new_post"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <!-- Top nav bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topNavbar"
        android:layout_width="0dp"
        android:layout_height="94dp"
        android:background="@drawable/gradient"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!-- Title, New Post -->
        <TextView
            android:id="@+id/titleNewPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Post"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topNavbar"
            tools:layout_editor_absoluteX="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <!-- Title of New Post -->
                <TextView
                    android:id="@+id/postTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="Title"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inputButtonTitle"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_gradient"
                    android:elevation="3dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:text="New Post"
                    android:textColorHint="@color/grey"
                    android:textSize="24sp" />

                <!-- Post Description -->
                <TextView
                    android:id="@+id/postDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="Description"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inputButtonDescription"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_gradient"
                    android:elevation="3dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:text="An item for rent"
                    android:textColorHint="@color/grey"
                    android:textSize="24sp" />

                <!-- Post Price -->
                <TextView
                    android:id="@+id/postPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="Price"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/inputButtonPrice"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_gradient"
                    android:elevation="3dp"
                    android:ems="10"
                    android:inputType="number"
                    android:padding="10dp"
                    android:text="500"
                    android:textColorHint="@color/grey"
                    android:textSize="24sp" />

                <!-- Post Days -->
                <TextView
                    android:id="@+id/postDays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="Max Rental Days"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/inputButtonDays"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/button_gradient"
                    android:elevation="3dp"
                    android:ems="10"
                    android:inputType="number"
                    android:padding="10dp"
                    android:text="3"
                    android:textColorHint="@color/grey"
                    android:textSize="24sp" />

                <!-- Create posting button -->
                <Button
                    android:id="@+id/buttonCreatePost"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_green"
                    android:fontFamily="sans-serif-medium"
                    android:padding="10dp"
                    android:text="Create Post"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="24sp"
                    android:onClick="createPost"
                    app:backgroundTint="@null" />

            </LinearLayout>

        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>