<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_login"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@null"
            android:fontFamily="sans-serif-medium"
            android:padding="0dp"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:onClick="goToSignUp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inputButtonPassword"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_gradient"
            android:elevation="3dp"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="10dp"
            android:hint="Password"
            android:textColorHint="@color/grey"
            android:textSize="24sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inputButtonUsername"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_gradient"
            android:elevation="3dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:hint="Username"
            android:textColorHint="@color/grey"
            android:textSize="24sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/inputButtonPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_gradient"
            android:backgroundTint="@null"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="Login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="24sp"
            android:onClick="login"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>